--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html lang="en">
+<html manifest="offline.manifest" lang="en">
 <head>
   <meta charset="utf-8">
 
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  
+  <div id="status">unknown</div>
 
   <script src="scripts/main.js"></script>
 </body>
