--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="An arcade cabinet for surveying the games industry">
   <meta name="author" content="jctwood">
 
-  <link rel="stylesheet" href="styles/main.css?v=1.0">
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
