--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 
-<body>
+<body onload="showStatus()">
   <div id="status">unknown</div>
 
   <script src="scripts/main.js"></script>
