--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html lang="en">
+<html manifest="offline.manifest" lang="en">
 <head>
   <meta charset="utf-8">
 
@@ -12,6 +12,8 @@
 </head>
 
 <body onload="showStatus()">
+  <div>Welcome to Survey Arcade!</div>
+  <hr />
   <div id="status">unknown</div>
 
   <script src="scripts/main.js"></script>
