--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html manifest="offline.manifest" lang="en">
+<!--manifest="offline.manifest"-->
+<html lang="en">
 <head>
   <meta charset="utf-8">
 
