Add basic editing

--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
 </head>
 
 <body onload="init()">
-  <div>Welcome to Survey Arcade!</div>
-  <hr />
+  <h2>Welcome to Survey Arcade!</h2>
   <div id="status">unknown</div>
 
-  <button onclick="displaySurveys()">Display Surveys</button>
+  <hr />
 
-  <div id="surveyList">surveys go here...</div>
+  <div id="surveyList">loading surveys...</div>
 
   <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase-auth.js"></script>
