Add ability to add to survey

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <hr />
 
-  <div id="surveyList">loading surveys...</div>
+  <div id="editorPanel">loading surveys...</div>
 
   <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase-auth.js"></script>
