--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 </head>
 
 <body onload="init()">
-  <h2>Welcome to Survey Arcade!</h2>
-  <div id="status">unknown</div>
+  <div id="header">
+    <h2>Welcome to Survey Arcade!</h2>
+    <div id="status">unknown</div>
 
-  <hr />
+    <hr />
+  </div>
 
   <div id="editorPanel">loading surveys...</div>
 
