--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase-database.js"></script>
+  <script src="scripts/jquery.js"></script>
   <script src="scripts/main.js"></script>
 </body>
 </html>
