--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
   <div id="editorPanel">loading surveys...</div>
 
+  <div id="activePanel"></div>
+
   <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase-database.js"></script>
