--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<manifest="offline.manifest">
+<!--manifest="offline.manifest"-->
 <html lang="en">
 <head>
   <meta charset="utf-8">
