Add more padding to the bottom of the editor

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 
 <body onload="init()">
   <div id="header">
-    <h2>Welcome to Survey Arcade!</h2>
-    <div id="status">unknown</div>
-
+    <h2>Welcome to Survey Arcade!    </h2><span id="status">unknown</span>
     <hr />
   </div>
 
